--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Simple Page</title>
+  <title>Aarthi'S WORLD</title>
 </head>
 <body>
   <h1>Welcome to My Website</h1>
-  <p>This is a basic HTML page.</p>
+  <p>I hate cherry</p>
 </body>
 </html>
